# ngiv

./: .gitattributes  .gitignore  CMakeLists.txt  NGIV.sln  README.md  ngiv.sln  ngiv.workspace  ngiv.workspace.layout  script.py  the2.py.v1
Test/: CMakeLists.txt  Manager.cpp  Manager.h  ObjectManager.h  Screen.cpp  Screen.h  Test.cbp  Test.depend  Test.layout  Test.vcxproj  Test.vcxproj.filters  Thumbs.db  main.cpp  obj_box.cpp  obj_box.h
Test/Models/ball/: Thumbs.db  untitled.mtl
Test/Models/floorobj/: floor.mtl
Test/Models/lowpolysphereobj/: sphere.mtl
Test/Models/metalboxv2obj/: untitled.mtl
Test/Models/windowobj/: window.mtl
Test/Saves/: savefile.txt
Test/Shaders/: DEBUG.fs  Gshader.fs  Gshader.vs  basic3D.fs  debug_basic3D.fs  debug_basic3D.vs  debug_w.fs  default2D.vs  defaultSkybox.fs  defaultSkybox.vs  default_2D.fs  default_3DShading.fs  default_Gshader.fs  default_Gshader.vs  default_Gshader_instanced.gs  default_Gshader_instanced.vs  default_Skybox.fs  default_text.vs  defaultlightold.vs  old.defaultlight.fs  old.defaultlight.vs
ngiv/: BasicLevelEditor.cpp  BasicLevelEditor.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  Collision_Box.h  ColorRGBA8.h  FastNoise.cpp  FastNoise.h  GLSLProgram.cpp  GLSLProgram.h  GameContainer.h  IOManager.h  IScreen.cpp  IScreen.h  IScreenManager.cpp  IScreenManager.h  InputManager.cpp  InputManager.h  Mesh.h  Misc.h  ModelLoader.cpp  ModelLoader.h  NGIV.h  NGUI.cpp  NGUI.h  Noise.cpp  Noise.h  OBJ.h  PhysicsWorld.cpp  PhysicsWorld.h  Renderer_2D.cpp  Renderer_2D.h  Renderer_3D.cpp  Renderer_3D.h  Renderer_Text.cpp  Renderer_Text.h  TerrainGenerator.cpp  (+11 more)
ngiv/Release/ngiv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  ngiv.lastbuildstate
